# IccUtil

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
doc/license/: README.md
extra/: iwyu.imp
src/: .clang-tidy
src/color/: CMakeLists.txt
src/color/include/color/: ColorConverter.h  Eotf.h  RgbColor.h  RgbFloatColor.h  SimpleColorConverter.h  SpectralLocus.h  XyChromaticity.h  XyyFloatColor.h  XyzFloatColor.h
src/color/src/: ColorConverter.cpp  Eotf.cpp  RgbColor.cpp  RgbFloatColor.cpp  SimpleColorConverter.cpp  SpectralLocus.cpp  XyChromaticity.cpp  XyyFloatColor.cpp  XyzFloatColor.cpp  XyzSpace.cpp
src/core/: CMakeLists.txt
src/core/include/core/: BuildInfo.h  Error.h  ExitAssert.h  Result.h  Util.h
src/core/src/: BuildInfo.cpp  Dummy.cpp  ExitAssert.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: ChromaticityWidget.h  MainWindow.h
src/gui/src/: ChromaticityDiagramWidget.cpp  ChromaticityDiagramWidget.h  ChromaticityTopWidget.cpp  ChromaticityTopWidget.h  ChromaticityWidget.cpp  ConvertColorWidget.cpp  ConvertColorWidget.h  IccMultiLocalizedUnicodeTypeDetailsWidget.cpp  IccMultiLocalizedUnicodeTypeDetailsWidget.h  IccSignatureTypeDetailsWidget.cpp  IccSignatureTypeDetailsWidget.h  IccTextDescriptionTypeDetailsWidget.cpp  IccTextDescriptionTypeDetailsWidget.h  IccTextTypeDetailsWidget.cpp  IccTextTypeDetailsWidget.h  IccXyzTypeDetailsWidget.cpp  IccXyzTypeDetailsWidget.h  MainWindow.cpp  ProfileDetailsWidget.cpp  ProfileDetailsWidget.h  Util.h
src/icc/: CMakeLists.txt
src/icc/include/icc/: IccDataType.h  IccFileBody.h  IccFileHeader.h  IccFileTagEntry.h  IccProfile.h  Util.h
src/icc/src/: IccDataType.cpp  IccFileBody.cpp  IccFileHeader.cpp  IccFileTagEntry.cpp  IccProfile.cpp  Util.cpp
src/icctypes/: CMakeLists.txt
src/icctypes/include/icctypes/: IccDateTimeNumber.h  IccMultiLocalizedUnicodeType.h  IccNumberConverter.h  IccSignatureType.h  IccTextDescriptionType.h  IccTextType.h  IccXyzNumber.h  IccXyzType.h
src/icctypes/src/: IccDateTimeNumber.cpp  IccMultiLocalizedUnicodeType.cpp  IccNumberConverter.cpp  IccSignatureType.cpp  IccTextDescriptionType.cpp  IccTextType.cpp  IccXyzNumber.cpp  IccXyzType.cpp
src/iccutil/: CMakeLists.txt
src/iccutil/src/: main.cpp
src/math/: CMakeLists.txt
src/math/include/math/: Matrix.h  SafeFuncs.h  Triangle.h  Vector.h
src/math/src/: SafeFuncs.cpp
src/theme/: CMakeLists.txt
src/theme/include/theme/: DarkTheme.h
src/theme/src/: DarkTheme.cpp
